@@ -1820,8 +1820,9 @@ the same frame element in the same load case.
 </p>
 
 <p>
-Whenever the average axial strain in a frame element connection (<i>Nx/(EAx)</i>) exceeds 0.001 (0.1%) in magnitude, a warning message is displayed indicating the strain level and the element in question.    Most structural materials yield at strains between
-0.1% and 0.2%.   When this warning message is displayed the structure is likely in an overloaded condition and the loads should be reduced.
+Whenever the average axial strain in a frame element connection (<i>Nx/(EAx)</i>) exceeds 0.001 (0.1%) in magnitude, a warning message is displayed indicating the strain level and the element in question.   
+Most structural materials yield at strains between 0.1% and 0.2%.  
+When this warning message is displayed the structure is likely in an overloaded condition and the loads should be reduced.
 Note that this check for overloaded elements provides an approximate stress check.
 A more complete stress check would compute the composite axial, shear, torsion
 and bending stresses and strains within each element.   
@@ -2886,6 +2887,9 @@ Exit code values have the following meanings:
 <li> 161 : input data formatting error in thermal load data, frame element number out of range
 <li> 162 : input data formatting error in thermal load data, frame element number out of range
 <li> 171 : input data formatting error in prescribed displacement data, prescribed displacements may be applied only at coordinates with reactions
+<li> 181 : elastic instability (elastic + geometric stiffness matrix not positive definite)
+<li> 182 : large strain (the average axial strain in one or more elements is greater than 0.001)
+<li> 183 : large strain and elastic instability
 <li> 200 : memory allocation error
 <li> 201 : error in opening an output data file saving a vector of "floats"
 <li> 202 : error in opening an output data file saving a vector of "ints"
